AC_PREREQ([2.69])
AC_INIT([guile-tap], [0.1.0], [jan@wedesoft.de])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([1.14])
AC_CONFIG_MACRO_DIR([m4])
AC_REQUIRE_AUX_FILE([tap-driver.sh])
LT_INIT
PKG_PROG_PKG_CONFIG
AM_CONFIG_HEADER(config.h)

PKG_CHECK_MODULES(GUILE, guile-2.0 >= 2.0.9)
GUILE_PROGS
GUILE_SITE_DIR
GUILE_EXT_DIR
GUILE_CACHE_DIR

AC_OUTPUT(Makefile)
